--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "build": "wireit",
     "clean": "wireit"
   },
+  "dependencies": {
+    "lit": "^3.3.1",
+    "magic-snowflakes": "^7.0.2"
+  },
   "devDependencies": {
     "ts-lit-plugin": "^2.0.2",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
     "wireit": "^0.14.12"
-  },
-  "dependencies": {
-    "lit": "^3.3.1"
   },
   "exports": {
     ".": "./dist/packages/components/index.js",
