--- a/package.json
+++ b/package.json
@@ -3,32 +3,48 @@
   "version": "0.0.1",
   "description": "A web component library from the Internet Archive.",
   "license": "AGPL-3.0-only",
-  "main": "dist/packages/components/index.js",
-  "types": "dist/packages/components/index.d.ts",
+  "main": "./dist/src/components/index.js",
+  "types": "./dist/src/components/index.d.ts",
   "scripts": {
+    "dev": "vite",
     "build": "wireit",
-    "clean": "wireit"
+    "clean": "wireit",
+    "lint": "eslint . && prettier \"**/*.ts\" --check",
+    "format": "eslint . --fix && prettier \"**/*.ts\" --write",
+    "circular": "madge --circular --extensions ts ."
   },
   "dependencies": {
     "lit": "^3.3.1",
     "magic-snowflakes": "^7.0.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-html": "^8.1.3",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-lit": "^1.15.0",
+    "eslint-plugin-lit-a11y": "^4.1.4",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "eslint-plugin-wc": "^2.2.1",
+    "madge": "^8.0.0",
+    "prettier": "^3.6.2",
     "ts-lit-plugin": "^2.0.2",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
+    "vite": "^7.2.2",
     "wireit": "^0.14.12"
   },
   "exports": {
-    ".": "./dist/packages/components/index.js",
-    "./components/*": "./dist/packages/components/*",
-    "./labs/*": "./dist/packages/labs/*"
+    ".": "./dist/src/components/index.js",
+    "./components/*": "./dist/src/components/*",
+    "./labs/*": "./dist/src/labs/*"
   },
   "wireit": {
     "build": {
       "command": "tsc --build --pretty",
       "files": [
-        "packages/**/*.ts",
+        "src/**/*.ts",
         "tsconfig.json"
       ],
       "output": [
