Lots of updates for ease of use

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,11 @@
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "importHelpers": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "erasableSyntaxOnly": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedSideEffectImports": true,
     "outDir": "dist",
     "rootDir": "./",
     "plugins": [
