--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
   "main": "./dist/src/components/index.js",
   "types": "./dist/src/components/index.d.ts",
   "scripts": {
-    "dev": "vite",
+    "dev": "wireit",
     "build": "wireit",
     "clean": "wireit",
-    "lint": "eslint . && prettier \"**/*.ts\" --check",
-    "format": "eslint . --fix && prettier \"**/*.ts\" --write",
-    "circular": "madge --circular --extensions ts ."
+    "lint": "wireit",
+    "format": "wireit",
+    "circular": "wireit",
+    "test": "wireit"
   },
   "dependencies": {
     "lit": "^3.3.1",
     "magic-snowflakes": "^7.0.2"
   },
   "devDependencies": {
+    "@open-wc/testing-helpers": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@vitest/browser": "^4.0.8",
+    "@vitest/browser-playwright": "^4.0.8",
+    "@vitest/coverage-v8": "^4.0.8",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-html": "^8.1.3",
@@ -28,11 +33,13 @@
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-wc": "^2.2.1",
     "madge": "^8.0.0",
+    "playwright": "^1.56.1",
     "prettier": "^3.6.2",
     "ts-lit-plugin": "^2.0.2",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
     "vite": "^7.2.2",
+    "vitest": "^4.0.8",
     "wireit": "^0.14.12"
   },
   "exports": {
@@ -43,6 +50,9 @@
   "wireit": {
     "build": {
       "command": "tsc --build --pretty",
+      "dependencies": [
+        "circular"
+      ],
       "files": [
         "src/**/*.ts",
         "tsconfig.json"
@@ -51,8 +61,26 @@
         "dist/**"
       ]
     },
+    "circular": {
+      "command": "madge --circular --extensions ts ."
+    },
     "clean": {
       "command": "rm -rf dist"
+    },
+    "dev": {
+      "command": "vite"
+    },
+    "lint": {
+      "command": "eslint . && prettier \"**/*.ts\" --check"
+    },
+    "format": {
+      "command": "eslint . --fix && prettier \"**/*.ts\" --write"
+    },
+    "test": {
+      "command": "vitest",
+      "dependencies": [
+        "circular"
+      ]
     }
   }
 }
