Add path aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,19 +25,23 @@
     "noUncheckedSideEffectImports": true,
     "outDir": "dist",
     "rootDir": "./",
+    "baseUrl": "./",
     "plugins": [
       {
         "name": "ts-lit-plugin"
       }
     ],
     "paths": {
-      "src": [
-        "./src"
+      "@src/*": [
+        "./src/*"
+      ],
+      "@demo/*": [
+        "./demo/*"
       ]
     },
   },
   "include": [
-    "demo",
-    "src",
+    "demo/**/*.ts",
+    "src/**/*.ts"
   ]
 }
