--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,13 +11,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
+    - uses: actions/checkout@v5
+    - uses: actions/setup-node@v5
       with:
-        node-version: latest
+        node-version: lts/*
 
     - name: Install dependencies
       run: npm install
+
+    - name: Install Playwright Browsers
+      run: npx playwright install --with-deps
 
     - name: Run tests
       run: npm run test
