--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,15 @@
       {
         "name": "ts-lit-plugin"
       }
-    ]
+    ],
+    "paths": {
+      "@src/*": [
+        "./src/*"
+      ],
+      "@demo/*": [
+        "./demo/*"
+      ]
+    },
   },
   "include": [
     "demo/**/*.ts",
