--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@internetarchive/ia-components",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha.1",
   "description": "A web component library from the Internet Archive.",
   "license": "AGPL-3.0-only",
   "main": "./dist/src/components/index.js",
