Add vitest to recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "bashmish.es6-string-css",
     "runem.lit-plugin",
     "ryanluker.vscode-coverage-gutters",
-    "google.wireit"
+    "google.wireit",
+    "vitest.explorer"
   ]
 }
