--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+node_modules/
+*.tgz
+*.tsbuildinfo
+.DS_Store
+.wireit
+/temp
 .idea
+/scripts/check-size-out.md
+/playground/p/**/package-lock.json
+/playground/p/scratch/*/
+!/playground/p/scratch/*.*
+/.direnv/
+/.envrc
+/.actrc
+dist
+coverage
+__screenshots__
