--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "wireit"
   },
   "dependencies": {
+    "@lit/localize": "^0.12.2",
     "lit": "^3.3.1",
     "magic-snowflakes": "^7.0.2",
     "tslib": "^2.8.1"
