--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-lit-a11y": "^4.1.4",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-wc": "^2.2.1",
+    "gh-pages": "^6.3.0",
     "highlight.js": "^11.11.1",
     "madge": "^8.0.0",
     "playwright": "^1.56.1",
