--- a/.github/gh-pages-main.yml
+++ b/.github/gh-pages-main.yml
@@ -1,4 +1,4 @@
-# This workflow will generate the static page under `main` subdirectory inside the `gh-pages` branch
+# This workflow will generate the static page under `main` subdirectory inside the `ghpages` branch
 
 # This workflow will run every time new changes were pushed to the `main` branch
 
