--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
       "dependencies": [
         "build"
       ],
-      "command": "gh-pages -d dist && npm run prepare && vite build"
+      "command": "gh-pages -d dist && npm run prepare && vite build --config vite.config.ghpages.ts"
     },
     "ghpages:publish": {
       "dependencies": [
