--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -14,6 +14,10 @@ on:
 
 concurrency: preview-${{ github.ref }}
 
+permissions:
+  contents: write
+  pages: write
+
 env:
   PREVIEW_BRANCH: ghpages
 jobs:
