Deploy preview for PR 25 🛫

--- a/pr/pr-25/demo/.vite/manifest.json
+++ b/pr/pr-25/demo/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "index.html": {
-    "file": "assets/index-Cz6N1eEe.js",
+    "file": "assets/index-C-07MuZs.js",
     "name": "index",
     "src": "index.html",
     "isEntry": true,
