--- a/.github/workflows/gh-pages-main.yml
+++ b/.github/workflows/gh-pages-main.yml
@@ -11,27 +11,27 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout 🛎️
+        uses: actions/checkout@v6
         with:
           persist-credentials: false
-      - uses: actions/setup-node@v4
-        with:
-          node-version: latest
 
+      - name: Set up Git
+        run: |
+          git config --global user.name "Github Actions"
+          git config --global user.email "actions@github.com"
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install and Build 🔧
+        run: |
+          npm ci
+          npm run ghpages:build
 
-      - name: Create build files for gh-pages deploy
-        run: npm run ghpages:build
-
-      # Reference: https://github.com/JamesIves/github-pages-deploy-action
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@v4.7.3
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: ghpages
           folder: ghpages
