--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "@lit/localize": "^0.12.2",
     "lit": "^3.3.1",
-    "magic-snowflakes": "^7.0.2"
+    "magic-snowflakes": "^7.0.2",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@open-wc/testing-helpers": "^3.0.1",
@@ -51,7 +52,6 @@
     "prettier": "^3.6.2",
     "ts-lit-plugin": "^2.0.2",
     "tsc-alias": "^1.8.16",
-    "tslib": "^2.8.1",
     "typescript": "^5.9.3",
     "vite": "^7.2.2",
     "vitest": "^4.0.8",
