WEBDEV-8141: Github Pages (#25)
* Add github pages preview

* Update ghpages scripts

* Update pages command

* Update branch name

* Update ghpages build config

* Remove type reference

* Bump

* Bump

* Move workflows

* Update ghpages scripts

* Test ghpages build without wireit

* Revert "Test ghpages build without wireit"

This reverts commit 131cb48876456536be48e11c27213e7372d7eb33.

* Reapply "Test ghpages build without wireit"

This reverts commit fcdba5034f46aa6c0da8fcae08e7c07967bb39e9.

* Revert "Reapply "Test ghpages build without wireit""

This reverts commit 59b5bec565183c9c8942f1057b12751af4b1e7cf.

* Add permissions

* Try using npm run build

* Try just running vite build

* Update base path

* Use ghpages:publish

* Set up git

* Remove unused npm scripts

* Combine build/no-jekyl step

* Update workflows

* Fix class names

* Remove unused package

* Linting

* Move tslib to devDependencies

* Revert tslib change

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "format": "wireit",
     "circular": "wireit",
     "prepare": "wireit",
-    "test": "wireit"
+    "test": "wireit",
+    "ghpages:build": "wireit"
   },
   "dependencies": {
     "@lit/localize": "^0.12.2",
@@ -109,6 +110,9 @@
       "dependencies": [
         "circular"
       ]
+    },
+    "ghpages:build": {
+      "command": "vite build --config vite.config.ghpages.ts && touch ./ghpages/.nojekyll"
     }
   }
 }
