Fix directory paths for demo

--- a/.github/workflows/gh-pages-main.yml
+++ b/.github/workflows/gh-pages-main.yml
@@ -34,7 +34,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: ghpages
-          folder: ghpages
+          folder: ghpages/demo/
           clean-exclude: pr/
           force: false
-          target-folder: main
