Remove ghpages demo dir

--- a/.github/workflows/gh-pages-main.yml
+++ b/.github/workflows/gh-pages-main.yml
@@ -34,6 +34,6 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: ghpages
-          folder: ghpages/demo/
+          folder: ghpages
           clean-exclude: pr/
           force: false
