--- a/pr/pr-24/.vite/manifest.json
+++ b/pr/pr-24/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "index.html": {
-    "file": "assets/index-BccaTkG7.js",
+    "file": "assets/index-KSyMenUd.js",
     "name": "index",
     "src": "index.html",
     "isEntry": true,
