--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "@lit/localize": "^0.12.2",
-    "lit": "^3.3.1",
+    "lit": "^2.7.0 || ^3.0.0",
     "magic-snowflakes": "^7.0.2",
     "tslib": "^2.8.1"
   },
