Deploy preview for PR 34 🛫

--- a/pr/pr-34/.vite/manifest.json
+++ b/pr/pr-34/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "index.html": {
-    "file": "assets/index-CNvtDMZ6.js",
+    "file": "assets/index-DAq7XThJ.js",
     "name": "index",
     "src": "index.html",
     "isEntry": true,
