--- a/pr/pr-36/.vite/manifest.json
+++ b/pr/pr-36/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "index.html": {
-    "file": "assets/index-N5GRd8CQ.js",
+    "file": "assets/index-CRzMh3Em.js",
     "name": "index",
     "src": "index.html",
     "isEntry": true,
